2006-10-24  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Status.java: (Status.paint):
	Don't crash on null pointers.

2006-10-24  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pad.java: (Pad.run), (Pad), (Pad.startTask),
	(Pad.pauseTask):
	Catch and report Exceptions exiting the taskFunc instead of stopping the
	task.
	Fix possible race in shutting down a task.

	* src/com/fluendo/jst/Sink.java: (Sink.Pad):
	Catch prerol/render Exception and post an error.

	* src/com/fluendo/player/Cortado.java: (Cortado..init),
	(Cortado..newSeek), (Cortado.), (Cortado..start):
	Add some more debug info.

	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.doSendEvent):
	Refuse a seek when we are not ready yet

2006-10-24  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Object.java: (Object.Object):
	Call super constructor

	* src/com/fluendo/player/Cortado.java: (Cortado..getEnum),
	(Cortado..init), (Cortado..actionPerformed),
	(Cortado..getGraphics), (Cortado.), (Cortado..run),
	(Cortado..realRun), (Cortado..newState), (Cortado..newSeek),
	(Cortado..start):
	Remove a bunch of synchronized calls that could potentially lock
	up the AWT thread.
	Add synchronized calls to init/start/stop

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.getInputStream):
	Do some stuff differently.

2006-10-24  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Bus.java: (Bus), (Bus.post), (Bus.poll):
	Implement flush().

	* src/com/fluendo/jst/Pipeline.java: (Pipeline),
	(Pipeline.BusThread), (Pipeline.StateThread), (Pipeline.Pipeline):
	cleanup threads.

	* src/com/fluendo/jst/Pad.java: (Pad), (Pad.run):
	* src/com/fluendo/player/Cortado.java: (Cortado..start):
	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.Pad),
	(HTTPSrc.getInputStream):
	* src/com/fluendo/plugin/Queue.java: (Queue.Pad):
	Give Threads a name.
	Don't send range for offset 0.

	* src/com/fluendo/utils/Debug.java: (Debug):
	Add code to generate unique ids.
