@@ -1,1 +1,1 @@
-java com.fluendo.examples.Player2 $1
+java com.fluendo.examples.Player $1
