@@ -1,3 +1,12 @@
+2006-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* src/com/fluendo/player/Cortado.java: (Cortado..getAppletInfo),
+	(Cortado..init), (Cortado.AppFrame.windowDeiconified),
+	(Cortado.AppFrame), (Cortado.AppFrame.windowIconified),
+	(Cortado.AppFrame.windowOpened), (Cortado),
+	(Cortado.AboutFrame.AboutFrame):
+	  trying to get svn revision in the output
+
 2006-10-24  Wim Taymans  <wim@fluendo.com>
 
 	* src/com/fluendo/player/Status.java: (Status.paint):
